[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Trap_UI.gd" type="Script" id=1]

[node name="Traper" type="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 218.0
margin_right = 199.0
margin_bottom = 304.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Size Flags" ]
Button_ = "1/1/Check_Traps"
Bar_ = "1/1/ProgressBar"

[node name="1" type="PanelContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 199.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="1" type="VBoxContainer" parent="1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 184.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Check_Traps" type="Button" parent="1/1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 177.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Check Traps"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="ProgressBar" type="ProgressBar" parent="1/1" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 177.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Size Flags" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 15.0
one_shot = true
autostart = false

[connection signal="toggled" from="1/1/Check_Traps" to="." method="_on_Check_Traps_toggled"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


